--- a/<!DOCTYPE html>.html
+++ b/<!DOCTYPE html>.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="container">
-      <h1>Сергей Ан</h1>
+      <h1>Сергей Хан</h1>
       <p class="subtitle">Front-end разработчик</p>
     </div>
   </header>
